--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-DB_CONNECTION = mongodb://127.0.0.1:27017/e-closet
+DB_CONNECTION = mongodb://127.0.0.1:27017/BeBetter
 # DB_CONNECTION = "mongodb+srv://admin:2001@cluster0.cxf0abf.mongodb.net/chat"
 JWT_EXPIRATION_TIME="100000000000"
 JWT_SECRET="2001"
