--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.51.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.0",
+    "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "yup": "^1.4.0",
